<resources>
    <string name="app_name">Joyor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="setting">Setting</string>
    <string name="support">Support</string>
    <string name="location">Update</string>
    <string name="login">Login</string>
    <string name="sign_up">SignUp</string>
    <string name="confirm">Confirm</string>
    <string name="search_for_location">Search for location</string>
    <string name="user">user</string>
    <string name="let_start">Lets start</string>
    <string name="destination">Destination</string>
    <string name="search">Search</string>
    <string name="your_location">Your Location</string>
    <string name="icon">icon</string>
    <string name="start">Start</string>
    <string name="google_maps_api">AIzaSyBs5jv2CS7LQWtjD8_mQMnWwhYC8KU1u0E</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="profile">Profile</string>
    <string name="subtotal">Sub Total</string>
    <string name="discount_amount">Discount</string>

    <string name="coupon_code">Coupon Code</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="company_name">Company Name(Optional)</string>
    <string name="add_address">Add Address</string>
    <string name="update_address">Update Address</string>
    <string name="address">Address</string>

    <string name="online">Online</string>
    <string name="town_city">Town / City</string>
    <string name="state_country">State / Country</string>
    <string name="billing_detail">Billing Detail</string>
    <string name="additional_information">Additional Information</string>
    <string name="payment_method">Payment Method</string>
    <string name="post_zip">Postcode / ZIP</string>
    <string name="select_country">Select Country</string>
    <string name="place_order">Place Order</string>
    <string name="order_notes">Notes about your order(Optional)</string>
    <string name="first_name_required">First name is Required</string>
    <string name="last_name_required">Last name is Required</string>
    <string name="phone_required">Phone is Required</string>
    <string name="country_required">Country is Required</string>
    <string name="street_required">Street Address is Required</string>
    <string name="street_address">Street Address</string>
    <string name="town_required">Town/City is Required</string>
    <string name="state_required">State is Required</string>
    <string name="post_required">PostCode is Required</string>
    <string name="email_required">Email is Required</string>
    <string name="password_required">Password is Required</string>
    <string name="coupon_required">Coupon is Required</string>
    <string-array name="lang">
        <item>English</item>
        <item>Spanish</item>
    </string-array>
    <string name="name">Name*</string>
    <string name="sure_name">Sure Name*</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="color">Color</string>
    <string name="Description">Description</string>
    <string name="spec_feature">Specification &amp; Feature</string>
    <string name="quantity">Quantity</string>
    <string name="total_amount">Total Amount</string>
    <string name="check_out">Proceed to Check Out</string>
    <string name="find_us">Find Us</string>
    <string name="our_dealer">Our Official Dealer </string>
    <string name="skip">Skip</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="gps">GPS</string>
    <string name="update">Update</string>
    <string name="logout">Logout</string>
    <string name="website">Website</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="about">About %1$s</string>
    <string name="language">Language</string>
    <string name="no_cart_item">No Cart Item Found</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="tech_support">Tech Support</string>
    <string name="product_added">Product added in Cart</string>

    <string name="joyor_scooters">Joyor Scooters</string>
    <string name="accessories">Accessories</string>
    <string name="joyor_spare_parts">Joyor Spare Parts</string>
    <string-array name="filter_list">
        <item>Filter</item>
        <item>Joyor Scooters</item>
        <item>Accessories</item>
        <item>Joyor Spare Parts</item>
    </string-array>
    <string name="filter">Filter</string>
    <string name="cancel_process">Cancel Process</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_product">Registered Products</string>
    <string name="model">Model</string>
    <string name="serial_no">Serial Number</string>
    <string name="country">Country</string>
    <string name="date_purchase">Date of Purchase</string>
    <string name="product_register_succuessfully">Product Registered Successfully</string>
    <string name="model_">Model:</string>
    <string name="serial_no_">Serial Number:</string>
    <string name="country_">Country:</string>
    <string name="date_purchase_">Date of Purchase:</string>
    <string name="address_detail">Address Details</string>
    <string name="no_amount">€0.0</string>
    <string name="product_register">Register Product</string>
    <string name="product_detail">Product Details</string>
    <string name="password_change_successfully">Password Changed Successfully</string>
    <string name="profile_profile">Profile Update</string>
    <string name="change_password">Change Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="model_required">Model is Required</string>
    <string name="serial_required">Serial Number is Required</string>
    <string name="date_required">Date is Required</string>
    <string name="select_product">Select Product</string>
    <string name="euro_currency">EUR</string>
    <string name="register_products">Registered Products</string>
    <string name="order_place_successfully">Order Placed Successfully</string>
    <string name="name_required">Name is Required</string>
    <string name="old_password_required">Old Password is Required</string>
    <string name="for_any_support"> You Must Register Your Product &amp; Login For Tech Support</string>
    <string name="confirm_password_required">Confirm Password is Required</string>
    <string name="new_password_required">New Password is Required</string>
    <string name="new_password_old_password">Entered Passwords Do Not Match</string>
    <string name="pal_login">Paypal Login</string>
    <string name="ok_key">OK</string>
    <string name="message_required">Message is Required</string>
    <string name="register_product_required">Select Registered Product</string>
    <string name="no_register_products">No Registered Products</string>
    <string name="both_field_required">Both Fields are Required</string>
    <string name="date_format">%1$s-%2$s-%3$s</string>
    <string name="currency">€%1$s</string>
    <string name="forgot_password_qm"><u>Forgot Password?</u></string>
    <string name="forgot_password">Forgot Password</string>
    <string name="submit">Submit</string>


</resources>