<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/product"
        android:icon="@drawable/ic_cart_inactive"
        tools:ignore="MenuTitle" />

    <item
        android:id="@+id/cartMenu"
        android:icon="@drawable/ic_order_inactive"
        tools:ignore="MenuTitle" />

    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_setting_inactive"
        android:title="@string/setting"
        tools:ignore="MenuTitle" />

    <item
        android:id="@+id/support"
        android:icon="@drawable/ic_support_inactive"
        android:title="@string/support"
        tools:ignore="MenuTitle" />

    <item
        android:id="@+id/location"
        android:icon="@drawable/ic_location_inactive"
        android:title="@string/location"
        tools:ignore="MenuTitle" />
</menu>